Sonar outputs has been cleared