@@ -1,18 +1,13 @@
 package org.orthologyapi.service;
 
-import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.linkTo;
-import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.methodOn;
-
 import java.util.List;
-import java.util.stream.Collectors;
-import org.orthologyapi.dto.OrthologDto;
 import org.orthologyapi.descriptor.OrthologMapper;
+import org.orthologyapi.dto.OrthologDto;
 import org.orthologyapi.projection.OrthologProjection;
 import org.orthologyapi.repository.OrthologRepository;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.web.PagedResourcesAssembler;
-import org.springframework.hateoas.PagedModel;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
@@ -30,26 +25,26 @@ public class OrthologService {
 
     public List<OrthologDto> findAllOneToOneOrthologsByMouseGeneList(List<String> genes) {
         return orthologRepository.findAllOrthologsByMouseGeneList(genes).stream()
-            .map(OrthologMapper::orthologToDto).collect(Collectors.toList());
+            .map(OrthologMapper::orthologToDto).toList();
     }
 
     public List<OrthologDto> findAllOneToOneOrthologsByHumanGeneList(List<String> genes) {
         return orthologRepository.findAllOrthologsByHumanGeneList(genes).stream()
-            .map(OrthologMapper::orthologToDto).collect(Collectors.toList());
+            .map(OrthologMapper::orthologToDto).toList();
     }
 
     public List<OrthologDto> findAllOneToOneOrthologsByMgiAccessionIdList(
         List<String> mgiAccessionIds) {
         return orthologRepository
             .findAllOrthologsByMgiAccessionIdList(mgiAccessionIds).stream()
-            .map(OrthologMapper::orthologToDto).collect(Collectors.toList());
+            .map(OrthologMapper::orthologToDto).toList();
     }
 
     public List<OrthologDto> findAllOneToOneOrthologsByHgncAccessionIdList(
         List<String> hgncAccessionIds) {
         return orthologRepository
             .findAllOrthologsByHgncAccessionIdList(hgncAccessionIds).stream()
-            .map(OrthologMapper::orthologToDto).collect(Collectors.toList());
+            .map(OrthologMapper::orthologToDto).toList();
     }
 
     public ResponseEntity findAllOrthologsPageable(final Pageable orthologPageable,
